@startuml database
allow_mixing

scale 1920 width
scale 1080 height

left to right direction

skinparam dpi 200
skinparam nodesep 30
skinparam ranksep 30

entity users {
    * id
    --
    email
    password
    first_name
    last_name
    phone
    photo_key
    last_login_time
    created_at_time
    updated_at_time
    role_id
    status_id
}

entity roles {
    * id
    --
    name
}

entity user_statuses {
    * id
    --
    name
}

entity rental_listings {
    * id
    --
    "title"
    description
    address_id
    tariff_id
    auto_renew
    main_photo_key
    created_at_time
    updated_at_time
    user_id
    status_id
}

entity rental_listing_addresses {
    * id
    --
    district
    locality
    street
    house_number
    additional_info
}

entity rental_listing_tariffs {
    * id
    --
    per_hour
    per_day
    per_week
    additional_info
}

entity rental_listing_statuses {
    * id
    --
    name
}

entity rental_listing_photos {
    * id
    --
    file_key
    rental_listing_id
}

entity bookings {
    * id
    --
    start_date_time
    end_date_time
    created_at_time
    updated_at_time
    rental_listing_id
    user_id
}

' Связи
users::role_id --> roles::id
users::status_id --> user_statuses::id
rental_listings::user_id --> users::id
rental_listings::address_id --> rental_listing_addresses::id
rental_listings::tariff_id --> rental_listing_tariffs::id
rental_listings::status_id --> rental_listing_statuses::id
rental_listing_photos::rental_listing_id --> rental_listings::id
bookings::rental_listing_id --> rental_listings::id
bookings::user_id --> users::id

@enduml
